--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,6 @@
-/* Footer.css */
 .Footer {
-    background-color: #ccc; /* Gray background color */
-    height: 50px; /* Height of the footer */
+    background-color: #ccc; 
+    height: 50px; 
     display: flex;
     align-items: center;
     justify-content: center;
