--- a/src/components/Toast.css
+++ b/src/components/Toast.css
@@ -4,7 +4,7 @@
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
-    margin-bottom: 10px; /* Add margin between toasts */
+    margin-bottom: 10px; 
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
   }
@@ -14,7 +14,7 @@
     left: 50%;
     transform: translateX(-50%);
     display: flex;
-    flex-direction: column-reverse; /* Stack toasts in reverse order */
+    flex-direction: column-reverse; 
   }
   
   .toast.visible {
@@ -42,31 +42,29 @@
 .each-Country_name{
     margin-bottom: 10px;
 }
-/* Add this style to your existing CSS or create a new CSS file */
+
 .button-style-pagination {
-    background-color: #4caf50; /* Green background color */
-    border: none; /* Remove border */
-    color: white; /* White text color */
-    padding: 10px 15px; /* Add padding */
-    text-align: center; /* Center text */
-    text-decoration: none; /* Remove underline */
+    background-color: #4caf50;
+    border: none;
+    color: white;
+    padding: 10px 15px; 
+    text-align: center;
+    text-decoration: none;
     display: inline-block;
-    font-size: 16px; /* Set font size */
-    margin: 4px 2px; /* Add margin between buttons */
-    cursor: pointer; /* Add cursor on hover */
-    border-radius: 5px; /* Add border radius for rounded corners */
+    font-size: 16px;
+    margin: 4px 2px; 
+    cursor: pointer; 
+    border-radius: 5px; 
   }
   
-  /* Add a different color for the disabled state */
   .button-style-pagination[disabled] {
-    background-color: #ccc; /* Grey background color for disabled state */
-    cursor: not-allowed; /* Change cursor to not-allowed */
+    background-color: #ccc;
+    cursor: not-allowed; 
   }
   
-  /* Optional: Style for the page number */
   span.page-number {
-    font-size: 18px; /* Set font size for the page number */
-    margin: 0 10px; /* Add margin around the page number */
+    font-size: 18px; 
+    margin: 0 10px; 
   }
   
 .country-names-container {
@@ -94,9 +92,6 @@
   align-items: center;
 }
 
-
-  
-  
   .toast.hidden {
     opacity: 0;
   }
