--- a/src/components/Toast.css
+++ b/src/components/Toast.css
@@ -1,110 +1,160 @@
-
 .toast {
-    background-color: #4acb5b;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    margin-bottom: 10px; 
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-  }
-  .toast-container {
-    position: fixed;
-    bottom: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    flex-direction: column-reverse; 
-  }
-  
-  .toast.visible {
-    opacity: 1;
-  }
-  
-.centered-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-top: 40px;
-  }
-
-.button-style {
-    margin-top: 20px;
+  background-color: #4acb5b;
+  color: #fff;
   padding: 10px 20px;
-  font-size: 16px;
-  background-color: #719fcf;
+  border-radius: 5px;
+  margin-bottom: 10px; 
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+.toast-container {
+  position: fixed;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column-reverse; 
+}
+
+.toast.visible {
+  opacity: 1;
+}
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(124, 118, 118, 0.5);
+  z-index: 998; 
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 999; 
+}
+
+.popup input[type="number"] {
+  width: 95%;
+  padding: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.settingImage{
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  padding-top: 30px;
+  margin-left: 10px;
+}
+.popup button {
+  padding: 10px 20px;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin: 10px 
+}
+
+.popup button:hover {
+  background-color: #45a049;
+}
+
+
+.centered-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.button-style {
+  margin-top: 20px;
+padding: 10px 20px;
+font-size: 16px;
+background-color: #719fcf;
+color: white;
+border: none;
+border-radius: 5px;
+cursor: pointer;
 }
 .each-Country_name{
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .button-style-pagination {
-    background-color: #4caf50;
-    border: none;
-    color: white;
-    padding: 10px 15px; 
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px; 
-    cursor: pointer; 
-    border-radius: 5px; 
-  }
-  
-  .button-style-pagination[disabled] {
-    background-color: #ccc;
-    cursor: not-allowed; 
-  }
-  
-  span.page-number {
-    font-size: 18px; 
-    margin: 0 10px; 
-  }
-  
-.country-names-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-.input-style {
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-top: 20px;
-    width: 300px;
-    box-sizing: border-box;
-  }
-  .input-style:focus {
-    border-color: #4caf50;
-    box-shadow: 0 0 5px rgba(76, 175, 80, 0.7);
-  }
-.toast-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 10px 15px; 
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px; 
+  cursor: pointer; 
+  border-radius: 5px; 
 }
 
-  .toast.hidden {
-    opacity: 0;
-  }
-  
-  .toast span {
-    margin-right: 10px;
-  }
-  
-  .toast button {
-    background: none;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
+.button-style-pagination[disabled] {
+  background-color: #ccc;
+  cursor: not-allowed; 
+}
+
+span.page-number {
+  font-size: 18px; 
+  margin: 0 10px; 
+}
+
+.country-names-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.input-style {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 20px;
+  width: 300px;
+  box-sizing: border-box;
+}
+.input-style:focus {
+  border-color: #4caf50;
+  box-shadow: 0 0 5px rgba(76, 175, 80, 0.7);
+}
+.toast-container {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.toast.hidden {
+  opacity: 0;
+}
+
+.toast span {
+  margin-right: 10px;
+}
+
+.toast button {
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+}
